05BERT/outputlog/slurm-47573.out
  File "./repos/OXIDE/train.py", line 267
    SAVE_FILE_NAME = f"[BERT]Random_State{RANDOM_STATE}_lr{LR}_epoch{epoch}_BERT{BERT[BERT.rfind("/")+1:]}_threshold{THRESHOLD}_MAX_LEN{MAX_LEN}"
                     ^
SyntaxError: f-string: unmatched '('
  File "./repos/OXIDE/train.py", line 267
    SAVE_FILE_NAME = f"[BERT]Random_State{RANDOM_STATE}_lr{LR}_epoch{epoch}_BERT{BERT[BERT.rfind("/")+1:]}_threshold{THRESHOLD}_MAX_LEN{MAX_LEN}"
                     ^
SyntaxError: f-string: unmatched '('
/data/dydtkddhkdwk
python ./repos/OXIDE/train.py --train_val_log_path /TRAIN_VAL_LOG/BERT --train_loss_avg_image_path /TRAIN_LOSS_AVG_IMAGE/BERT --validation_metric_image_nanoparticle_path /VALIDATION_METRIC_IMAGE_NANOPARTICLE/BERT --validation_metric_image_main_subject_path /VALIDATION_METRIC_IMAGE_MAIN_SUBJECT/BERT --validation_metric_image_avg_path /VALIDATION_METRIC_IMAGE_AVG/BERT --test_metric_log_path /TEST_METRIC_LOG/BERT --test_metric_image_nanoparticle_path /TEST_METRIC_IMAGE_NANOPARTICLE/BERT --test_metric_image_main_subject_path /TEST_METRIC_IMAGE_MAIN_SUBJECT/BERT --test_metric_image_avg_path /TEST_METRIC_IMAGE_AVG/BERT --model_weight_path /MODEL_WEIGHT/BERT --threshold 0.5 --epochs 5 --bert ./repos/OXIDE/scibert_scivocab_cased --data_path ./repos/OXIDE/purify_data.xlsx --ssh_path ./repos/OXIDE
Command failed: python ./repos/OXIDE/train.py --train_val_log_path /TRAIN_VAL_LOG/BERT --train_loss_avg_image_path /TRAIN_LOSS_AVG_IMAGE/BERT --validation_metric_image_nanoparticle_path /VALIDATION_METRIC_IMAGE_NANOPARTICLE/BERT --validation_metric_image_main_subject_path /VALIDATION_METRIC_IMAGE_MAIN_SUBJECT/BERT --validation_metric_image_avg_path /VALIDATION_METRIC_IMAGE_AVG/BERT --test_metric_log_path /TEST_METRIC_LOG/BERT --test_metric_image_nanoparticle_path /TEST_METRIC_IMAGE_NANOPARTICLE/BERT --test_metric_image_main_subject_path /TEST_METRIC_IMAGE_MAIN_SUBJECT/BERT --test_metric_image_avg_path /TEST_METRIC_IMAGE_AVG/BERT --model_weight_path /MODEL_WEIGHT/BERT --threshold 0.5 --epochs 5 --bert ./repos/OXIDE/scibert_scivocab_cased --data_path ./repos/OXIDE/purify_data.xlsx --ssh_path ./repos/OXIDE
python ./repos/OXIDE/train.py --train_val_log_path /TRAIN_VAL_LOG/BERT --train_loss_avg_image_path /TRAIN_LOSS_AVG_IMAGE/BERT --validation_metric_image_nanoparticle_path /VALIDATION_METRIC_IMAGE_NANOPARTICLE/BERT --validation_metric_image_main_subject_path /VALIDATION_METRIC_IMAGE_MAIN_SUBJECT/BERT --validation_metric_image_avg_path /VALIDATION_METRIC_IMAGE_AVG/BERT --test_metric_log_path /TEST_METRIC_LOG/BERT --test_metric_image_nanoparticle_path /TEST_METRIC_IMAGE_NANOPARTICLE/BERT --test_metric_image_main_subject_path /TEST_METRIC_IMAGE_MAIN_SUBJECT/BERT --test_metric_image_avg_path /TEST_METRIC_IMAGE_AVG/BERT --model_weight_path /MODEL_WEIGHT/BERT --threshold 0.5 --epochs 5 --bert ./repos/OXIDE/scibert_scivocab_uncased --data_path ./repos/OXIDE/purify_data.xlsx --ssh_path ./repos/OXIDE
Command failed: python ./repos/OXIDE/train.py --train_val_log_path /TRAIN_VAL_LOG/BERT --train_loss_avg_image_path /TRAIN_LOSS_AVG_IMAGE/BERT --validation_metric_image_nanoparticle_path /VALIDATION_METRIC_IMAGE_NANOPARTICLE/BERT --validation_metric_image_main_subject_path /VALIDATION_METRIC_IMAGE_MAIN_SUBJECT/BERT --validation_metric_image_avg_path /VALIDATION_METRIC_IMAGE_AVG/BERT --test_metric_log_path /TEST_METRIC_LOG/BERT --test_metric_image_nanoparticle_path /TEST_METRIC_IMAGE_NANOPARTICLE/BERT --test_metric_image_main_subject_path /TEST_METRIC_IMAGE_MAIN_SUBJECT/BERT --test_metric_image_avg_path /TEST_METRIC_IMAGE_AVG/BERT --model_weight_path /MODEL_WEIGHT/BERT --threshold 0.5 --epochs 5 --bert ./repos/OXIDE/scibert_scivocab_uncased --data_path ./repos/OXIDE/purify_data.xlsx --ssh_path ./repos/OXIDE
failed command: ['python ./repos/OXIDE/train.py --train_val_log_path /TRAIN_VAL_LOG/BERT --train_loss_avg_image_path /TRAIN_LOSS_AVG_IMAGE/BERT --validation_metric_image_nanoparticle_path /VALIDATION_METRIC_IMAGE_NANOPARTICLE/BERT --validation_metric_image_main_subject_path /VALIDATION_METRIC_IMAGE_MAIN_SUBJECT/BERT --validation_metric_image_avg_path /VALIDATION_METRIC_IMAGE_AVG/BERT --test_metric_log_path /TEST_METRIC_LOG/BERT --test_metric_image_nanoparticle_path /TEST_METRIC_IMAGE_NANOPARTICLE/BERT --test_metric_image_main_subject_path /TEST_METRIC_IMAGE_MAIN_SUBJECT/BERT --test_metric_image_avg_path /TEST_METRIC_IMAGE_AVG/BERT --model_weight_path /MODEL_WEIGHT/BERT --threshold 0.5 --epochs 5 --bert ./repos/OXIDE/scibert_scivocab_cased --data_path ./repos/OXIDE/purify_data.xlsx --ssh_path ./repos/OXIDE', 'python ./repos/OXIDE/train.py --train_val_log_path /TRAIN_VAL_LOG/BERT --train_loss_avg_image_path /TRAIN_LOSS_AVG_IMAGE/BERT --validation_metric_image_nanoparticle_path /VALIDATION_METRIC_IMAGE_NANOPARTICLE/BERT --validation_metric_image_main_subject_path /VALIDATION_METRIC_IMAGE_MAIN_SUBJECT/BERT --validation_metric_image_avg_path /VALIDATION_METRIC_IMAGE_AVG/BERT --test_metric_log_path /TEST_METRIC_LOG/BERT --test_metric_image_nanoparticle_path /TEST_METRIC_IMAGE_NANOPARTICLE/BERT --test_metric_image_main_subject_path /TEST_METRIC_IMAGE_MAIN_SUBJECT/BERT --test_metric_image_avg_path /TEST_METRIC_IMAGE_AVG/BERT --model_weight_path /MODEL_WEIGHT/BERT --threshold 0.5 --epochs 5 --bert ./repos/OXIDE/scibert_scivocab_uncased --data_path ./repos/OXIDE/purify_data.xlsx --ssh_path ./repos/OXIDE']
failed command: ['python ./repos/OXIDE/train.py --train_val_log_path /TRAIN_VAL_LOG/BERT --train_loss_avg_image_path /TRAIN_LOSS_AVG_IMAGE/BERT --validation_metric_image_nanoparticle_path /VALIDATION_METRIC_IMAGE_NANOPARTICLE/BERT --validation_metric_image_main_subject_path /VALIDATION_METRIC_IMAGE_MAIN_SUBJECT/BERT --validation_metric_image_avg_path /VALIDATION_METRIC_IMAGE_AVG/BERT --test_metric_log_path /TEST_METRIC_LOG/BERT --test_metric_image_nanoparticle_path /TEST_METRIC_IMAGE_NANOPARTICLE/BERT --test_metric_image_main_subject_path /TEST_METRIC_IMAGE_MAIN_SUBJECT/BERT --test_metric_image_avg_path /TEST_METRIC_IMAGE_AVG/BERT --model_weight_path /MODEL_WEIGHT/BERT --threshold 0.5 --epochs 5 --bert ./repos/OXIDE/scibert_scivocab_cased --data_path ./repos/OXIDE/purify_data.xlsx --ssh_path ./repos/OXIDE', 'python ./repos/OXIDE/train.py --train_val_log_path /TRAIN_VAL_LOG/BERT --train_loss_avg_image_path /TRAIN_LOSS_AVG_IMAGE/BERT --validation_metric_image_nanoparticle_path /VALIDATION_METRIC_IMAGE_NANOPARTICLE/BERT --validation_metric_image_main_subject_path /VALIDATION_METRIC_IMAGE_MAIN_SUBJECT/BERT --validation_metric_image_avg_path /VALIDATION_METRIC_IMAGE_AVG/BERT --test_metric_log_path /TEST_METRIC_LOG/BERT --test_metric_image_nanoparticle_path /TEST_METRIC_IMAGE_NANOPARTICLE/BERT --test_metric_image_main_subject_path /TEST_METRIC_IMAGE_MAIN_SUBJECT/BERT --test_metric_image_avg_path /TEST_METRIC_IMAGE_AVG/BERT --model_weight_path /MODEL_WEIGHT/BERT --threshold 0.5 --epochs 5 --bert ./repos/OXIDE/scibert_scivocab_uncased --data_path ./repos/OXIDE/purify_data.xlsx --ssh_path ./repos/OXIDE']
